--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <nav>
         <h2 class="logo">PORTFOLIO</h2>
         <ul>
-          <li><a href="WebPortfolio.html">HOME</a></li>
+          <li><a href="index.html">HOME</a></li>
           <li><a href="portfolio.html">取り組み</a></li>
           <li><a href="Artifact_Simulator.html">シミュレータ</a></li>
         </ul>
