--- a/index.html
+++ b/index.html
@@ -34,11 +34,62 @@
     <div class="button-container">
       <button id="profile_button">詳細</button>
     </div>
+
+    <div id="details" class="hidden">
+      <div class="details">
+        <div class="hobby">
+          <h3 class="title">趣味</h3>
+          <div class="main_hobby">
+            <div class="game">
+              <h4>ゲーム</h4>
+              <div class="info">
+                <img src="img/my_pc.png" alt="game">
+                <div class="text">
+                  <p>高専１年生の冬に自作パソコンを組み上げ、改良を重ねながらゲームを遊んでいる。</p>
+                  <p>去年電源の不調があってから、グラボが常に点滅している。</p>
+                  <p>プレイしているゲーム</p>
+                  <div class="list">
+                    <ul>
+                      <li>原神</li>
+                      <li>崩壊スターレイル</li>
+                      <li>GTA5</li>
+                      <li>VALORANT</li>
+                    </ul>
+                    <ul>
+                      <li>MINECRAFT</li>
+                      <li>7days to die</li>
+                      <li>The Crew</li>
+                      <li>PHASMOPHOBIA</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="sub_hobby">
+              <div class="piano">
+                <h4>ピアノ</h4>
+                <div class="info">
+                  <p>中学２年生から独学でピアノを練習。</p>
+                  <p>毎日ちまちま練習することの大事さを学ぶ。</p>
+                  <p>最近はゲームのBGMを弾くのにはまっている。</p>
+                </div>
+              </div>
+
+              <div class="rubikcube">
+                <h4>ルービックキューブ</h4>
+                <div class="info">
+                    <p>叔父さん(母方弟)と叔父さん(母方妹夫)の影響で始める。</p>
+                    <p>最速記録は25秒！！！</p>
+                </div>
+              </div>
+            </div>
+         </div>
+        </div>
+      </div>
+    </div>
   </div>
 
-  <div id="details" class="hidden">
-    <p>自己紹介の詳細です</p>
-  </div>
   <script src="button-script.js"></script>
 
   <div class="portfolio">
@@ -61,7 +112,7 @@
 
       <div class="card">
         <h5>その他</h5>
-        <img src="img/my_pc.png" alt="pasokon" class="image">
+        <img src="img/camp.png" alt="pasokon" class="image">
         <a href="portfolio.html#others" class="button">もっと読む</a>
       </div>
 
