--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="profile">
     <h2>自己紹介</h2>
     <div class="container">
-      <img src="img/icon_art.png" alt="My face!">
+      <img src="img/Icon.png" alt="My face!">
       <div class="text">
         <div class="name">
           <h1>小野 誠秀</h1>
